# mlisp

./: .gitignore  .ocamlformat  dune-project  readme.md
lib/: common.ml  concrete.ml  error_message.messages  error_messages.ml  ir_lisp.ml  lexer.mll  parse.ml  parser.mly  semantics.ml  syntactics.ml  typing.ml
testcases/: addnums.sp  counteven.sp  err_lexical_include.sp  err_lexical_str.sp  err_syntax_func1.sp  err_syntax_func2.sp  err_type_check_func1.sp  err_type_check_func2.sp  fbnc.sp  list.sp  prim.spi
